Bug 341535 - CAFF function not working with GnuPG 2.1
Summary: CAFF function not working with GnuPG 2.1
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.13.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks: 340676
  Show dependency treegraph
 
Reported: 2014-12-03 22:19 UTC by Tim Ruffing
Modified: 2015-11-05 16:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 15.08.3
Sentry Crash Report:


Attachments
Proposed patch (2.40 KB, patch)
2015-09-19 20:47 UTC, Rolf Eike Beer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Ruffing 2014-12-03 22:19:07 UTC
As mentioned already in bug 340676, "sign uid and email" does not work. KGpg lets me select the key for signing. After I selected a key and click OK, it just does nothing and outputs 
kgpg(2226) KGpgCaffPrivate::abortOperation: transaction KGpgSignUid(0xbb0750) failed, result 2

If I choose to sign a public key with its corresponding secret key, then the output is different:
kgpg(2226) KGpgCaffPrivate::abortOperation: transaction KGpgImport(0xc9d390) failed, result -1


I could not encounter the crash that has been reported in bug 340676.

Reproducible: Always
Comment 1 Rolf Eike Beer 2015-09-12 20:39:37 UTC
The problem is that when it comes to actually signing the keys (which happens within a temporary directory) GnuPG says "no secret key".
Comment 2 Rolf Eike Beer 2015-09-19 20:47:50 UTC
Created attachment 94651 [details]
Proposed patch

Can someone please try out if this patch helps anything?
Comment 3 Rolf Eike Beer 2015-10-21 19:01:46 UTC
Git commit 10838fa8f856b9dc977647601cb532a32f6e035e by Rolf Eike Beer.
Committed on 21/10/2015 at 18:58.
Pushed by dakon into branch 'Applications/15.08'.

fix GnuPG 2.1 not finding the secret keys in CAFF mode

See http://lists.gnupg.org/pipermail/gnupg-devel/2014-December/029296.html for
a description of the problem.

This still does not fix the entire problem.

M  +15   -2    caff.cpp
M  +2    -0    caff_p.h

http://commits.kde.org/kgpg/10838fa8f856b9dc977647601cb532a32f6e035e
Comment 4 Rolf Eike Beer 2015-11-05 16:14:29 UTC
Git commit 300cf34cc3cae322d9c8a456b92fceac3c28bdda by Rolf Eike Beer.
Committed on 05/11/2015 at 16:12.
Pushed by dakon into branch 'Applications/15.08'.

make KGpgSignUid work with GnuPG >= 2.1
FIXED-IN:15.08.3

M  +24   -1    transactions/kgpgsignuid.cpp
M  +1    -0    transactions/kgpgsignuid.h

http://commits.kde.org/kgpg/300cf34cc3cae322d9c8a456b92fceac3c28bdda