make KGpgSignUid work with GnuPG >= 2.1

BUG:341535
FIXED-IN:15.08.3